Handle login failure caused by maintenance as 503 error in basicAuth Add permission refs evaluation in PrincipalApi
